# gnubeans-tui-prototype

./: .gitignore  ISSUES-tui_architecture_spec.md  README.md  append_tasks.py  fix_conflict.py  gemini_task3.patch  issue_queue.md  pyproject.toml  resize_demo.py  rezonant_task3.patch  test_tui.py  tui_architecture_spec.md  tui_interaction_storyboard.md  tui_prototype.py
.claude/: settings.local.json
_bmad/: config.toml  config.user.toml
_bmad-output/planning-artifacts/: architecture.md  epics.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
attached_assets/: Pasted-Prototype-tui-prototype-py-using-python-TUI-frameworks-_1778769301135.txt
docs/: issue_queue.md  readline-support-matrix.md  sprint-status.yaml  tui_architecture_spec.md  tui_interaction_storyboard.md  tui_storyboard_analysis_plan.md
examples/: demo.py
gnubeans_mapping_tui/: loop.py  selectors.py
mapping-resolution-tui/: actions.py  renderer.py  state.py
mapping_resolution_tui/: __init__.py  actions.py  config.py  events.py  loop.py  reducer.py  renderer.py  selectors.py  state.py
mapping_resolution_tui/fixtures/: storyboard.py
tests/: conftest.py
tests/features/: accept_confirmation.feature  browsing_navigation.feature  collision_filter.feature  collision_metafilter.feature  confirming_scroll.feature  edit_mode.feature  edit_submit_cancel.feature  exit_confirmation.feature  initial_state.feature  rendering.feature  selection_navigation.feature  source_navigation.feature  text_filter.feature
tests/fixtures/: storyboard.py
tests/golden/: test_frame_10.py  test_frame_11.py  test_frame_11_burst.py  test_frame_12a.py  test_frame_12b.py  test_frame_13.py  test_frame_14.py  test_frame_15.py  test_frame_1a.py  test_frame_1b.py  test_frame_2.py  test_frame_3.py  test_frame_4.py  test_frame_5.py  test_frame_6.py  test_frame_8.py  (+6 more)
(+52 files in other folders)
