[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapping-resolution-tui"
version = "0.4.6"
description = "A reusable Python terminal component for resolving mapping collisions through keyboard-driven review, source-assisted editing, validation, and confirmation."
requires-python = ">=3.11"
dependencies = [
    "blessed>=1.44.0",
    "rich>=13",
    "textual>=8.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-bdd>=8.1.0",
]

[project.scripts]
demo = "examples.demo:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
