[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapping-resolution-tui"
version = "0.9.32"
description = "A reusable Python terminal component for resolving mapping collisions through keyboard-driven review, source-assisted editing, validation, and confirmation."
requires-python = ">=3.11"
dependencies = [
    "blessed>=1.44.0",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-bdd>=8.1.0",
    "pyte>=0.8.0",
]

[project.scripts]
demo = "examples.demo:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
